# OOPs-To-Agents

./: README.md  requirements.txt
Agents/: Task1.py  Task2.py  Task3.py
Crew/: output.txt  tools.py
CrewAi/: agents.py  output.txt  tools.py
CrewAi/crewai_tasks/: README.md  pyproject.toml
CrewAi/crewai_tasks/src/crewai_tasks/: crew.py  main.py
CrewAi/crewai_tasks/src/crewai_tasks/tools/: __init__.py  custom_tool.py
LangGraph/: ChatBot
Langchain/: Task1_1.py  Task1_2.py  Task2_1.py  Task2_2.py
RAG/: Project1.py  Task1_2.py  Task1_3.py  Task1_4.py  Task1_7.py  Task2_1.py  Task2_3.py  Task2_6.py  demo.txt  fazz.txt
smart_energy_demo/: agent_b.py  app.py  mcp_server.py  requirements.txt
smart_energy_demo/templates/: home.html
