[project]
name = "crewai_tasks"
version = "0.1.0"
description = "CrewAi_Tasks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
crewai_tasks = "crewai_tasks.main:run"
run_crew = "crewai_tasks.main:run"
train = "crewai_tasks.main:train"
replay = "crewai_tasks.main:replay"
test = "crewai_tasks.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
